1.add onClick handle method 2.method name change drag->onDrag, press->onPress

--- a/src/main/resources/static/float/float.fxml
+++ b/src/main/resources/static/float/float.fxml
@@ -7,7 +7,8 @@
             fx:id="anchorPane"
             stylesheets="@./float.css"
             styleClass="anchor-pane"
-            onMouseDragged="#drag"
-            onMousePressed="#press">
+            onMouseReleased="#onClick"
+            onMouseDragged="#onDrag"
+            onMousePressed="#onPress">
 
 </AnchorPane>
